--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">Tour South Chil Chil</string>
 
     <string name="signin">Sign In</string>
-    <string name="signup">Sign Up</string>
+    <string name="signup">สมัครสมาชิก</string>
+
+    <string name="name">ชื่อ</string>
+    <string name="email">E-mail</string>
+    <string name="user">User</string>
+    <string name="password">Password</string>
 
 </resources>
