--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="email">E-mail</string>
     <string name="user">User</string>
     <string name="password">Password</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
